fix bugtracker link

--- a/dist.ini
+++ b/dist.ini
@@ -44,9 +44,9 @@ add_files_in = README.mkdn
 
 ; -- static meta-information
 [MetaResources]
-bugtracker.web  = https://github.com/p5pclub/ref-util/
+bugtracker.web  = https://github.com/p5pclub/ref-util/issues
 repository.url  = git://github.com/p5pclub/ref-util.git
-repository.web  = https://github.com/p5pclub/ref-util/
+repository.web  = https://github.com/p5pclub/ref-util
 repository.type = git
 
 [PruneFiles]
