These are also important

--- a/dist.ini
+++ b/dist.ini
@@ -29,6 +29,9 @@ xt_mode = 1
 [NextRelease]
 filename = Changes
 
+[TestRelease]
+[ConfirmRelease]
+
 [@Git]
 allow_dirty = Changes
 allow_dirty = dist.ini
