do not move xt/foo/* to xt/foo_*

--- a/dist.ini
+++ b/dist.ini
@@ -42,6 +42,7 @@ add_files_in = README.mkdn
 [@Filter]
 -bundle = @Basic
 -remove = AutoPrereqs
+-remove = ExtraTests
 -remove = MakeMaker
 
 ; -- static meta-information
