automatically calculate the version from latest git tag; bumps version to 0.114

--- a/dist.ini
+++ b/dist.ini
@@ -7,8 +7,6 @@ license = MIT
 copyright_holder = Sawyer X
 copyright_year   = 2017
 
-version = 0.113
-
 [PPPort]
 
 [PkgVersion]
@@ -39,6 +37,8 @@ allow_dirty = README.mkdn
 add_files_in = Changes
 add_files_in = dist.ini
 add_files_in = README.mkdn
+
+[Git::NextVersion]
 
 [@Filter]
 -bundle = @Basic
