bring back [MakeMaker] (for TestRunner etc)
the in-repo Makefile.PL is now just for testing, so it does not include
things such as prerequisites, licensing information etc.

--- a/dist.ini
+++ b/dist.ini
@@ -44,7 +44,11 @@ add_files_in = README.mkdn
 -bundle = @Basic
 -remove = AutoPrereqs
 -remove = ExtraTests
--remove = MakeMaker
+-remove = GatherDir
+
+[GatherDir]
+exclude_filename = Makefile.PL
+exclude_filename = ppport.h
 
 ; -- static meta-information
 [MetaResources]
