--- a/dist.ini
+++ b/dist.ini
@@ -64,3 +64,7 @@ match = ~$ ; emacs backup files
 
 [ ReadmeAnyFromPod / MarkdownInRoot ]
 filename = README.mkdn
+
+[DynamicPrereqs]
+:version = 0.029
+-body_from_file = makefile-pl-inc.pl
