--- a/dist.ini
+++ b/dist.ini
@@ -3,6 +3,7 @@ author  = Sawyer X <xsawyerx@cpan.org>
 author  = Aaron Crane <arc@cpan.org>
 author  = Vikenty Fesunov <vyf@cpan.org>
 author  = Gonzalo Diethelm <gonzus@cpan.org>
+author  = Karen Etheridge <ether@cpan.org>
 license = MIT
 copyright_holder = Sawyer X
 copyright_year   = 2017
