remove misuse of DynamicPrereqs for unrelated makefile snippet

--- a/dist.ini
+++ b/dist.ini
@@ -44,6 +44,7 @@ add_files_in = README.mkdn
 -remove = AutoPrereqs
 -remove = ExtraTests
 -remove = GatherDir
+-remove = MakeMaker ; MakeMaker::Awesome used lower down
 
 [GatherDir]
 exclude_filename = Makefile.PL
@@ -57,6 +58,7 @@ repository.type = git
 
 [PruneFiles]
 match = ~$ ; emacs backup files
+match = makefile-pl-inc.pl
 
 ;[PodCoverageTests]
 ;[Test::EOL]
@@ -66,6 +68,14 @@ match = ~$ ; emacs backup files
 [ ReadmeAnyFromPod / MarkdownInRoot ]
 filename = README.mkdn
 
+[MakeMaker::Awesome]
+:version = 0.35
+footer_file = makefile-pl-inc.pl
+
 [DynamicPrereqs]
 :version = 0.029
--body_from_file = makefile-pl-inc.pl
+-delimiter = |
+-body = |if (!want_pp() && can_xs()) {
+-body = |    test_requires('Ref::Util::XS');
+-body = |    runtime_requires('Ref::Util::XS');
+-body = |}
