--- a/dist.ini
+++ b/dist.ini
@@ -72,6 +72,7 @@ filename = README.mkdn
 :version = 0.35
 footer_file = makefile-pl-inc.pl
 
+; authordep ExtUtils::HasCompiler
 [DynamicPrereqs]
 :version = 0.029
 -delimiter = |
