you need to be this -- high to go on this ride

--- a/dist.ini
+++ b/dist.ini
@@ -72,7 +72,7 @@ filename = README.mkdn
 :version = 0.35
 footer_file = makefile-pl-inc.pl
 
-; authordep ExtUtils::HasCompiler
+; authordep ExtUtils::HasCompiler = 0.014
 [DynamicPrereqs]
 :version = 0.029
 -delimiter = |
