ensure the perl prereq stays at 5.6

--- a/dist.ini
+++ b/dist.ini
@@ -19,7 +19,11 @@ xt_mode = 1
 [PodWeaver]
 [RunExtraTests]
 [MetaJSON]
+
 [MinimumPerlFast]
+min = 5.006 ; undocumented config!
+max = 5.006 ; undocumented config!
+
 [MetaConfig]
 
 [MetaProvides::Package]
@@ -28,6 +32,9 @@ xt_mode = 1
 filename = Changes
 
 [TestRelease]
+
+[Test::MinimumVersion]
+max_target_perl = 5.006
 
 [@Git]
 allow_dirty = Changes
