--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,17 @@
 sudo: false
 language: perl
 perl:
-    - "blead"
-    - "dev"
     - "5.24"
-    - "5.24-thr"
-    - "5.22"
-    - "5.22-thr"
-    - "5.20"
-    - "5.20-thr"
-    - "5.18.3"
-    - "5.18.3-thr"
-    - "5.16"
-    - "5.16-thr"
-    - "5.14"
-    - "5.14-thr"
-    - "5.12"
-    - "5.12-thr"
-    - "5.12"
-    - "5.12-thr"
     - "5.10.0"
-    - "5.10.0-thr"
-    - "5.10.1"
-    - "5.10.1-thr"
     - "5.8.4"
-    - "5.8.4-thr"
     - "5.6.2"
     - "5.6.2-thr"
 matrix:
+    include:
+        - perl: 5.6.2
+          env: VERBOSE=1
+        - perl: 5.6.2-thr
+          env: VERBOSE=1
     allow_failures:
         - perl: blead
 before_install:
