--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,36 @@
 sudo: false
 language: perl
 perl:
+    - "blead"
+    - "dev"
     - "5.24"
+    - "5.24-thr"
+    - "5.22"
+    - "5.22-thr"
+    - "5.20"
+    - "5.20-thr"
+    - "5.18.3"
+    - "5.18.3-thr"
+    - "5.16"
+    - "5.16-thr"
+    - "5.14"
+    - "5.14-thr"
+    - "5.12"
+    - "5.12-thr"
+    - "5.12"
+    - "5.12-thr"
     - "5.10.0"
+    - "5.10.0-thr"
+    - "5.10.1"
+    - "5.10.1-thr"
     - "5.8.4"
+    - "5.8.4-thr"
 matrix:
     include:
         - perl: 5.6.2
-          env: VERBOSE=1
-        - perl: 5.6.2-thr
-          env: VERBOSE=1
+          env: AUTHOR_TESTING=0 RELEASE_TESTING=0
     allow_failures:
         - perl: blead
 before_install:
+          - cpanm Readonly  # so t/magic-readonly.t can run
           - eval $(curl https://travis-perl.github.io/init) --auto
