--- a/.travis.yml
+++ b/.travis.yml
@@ -31,4 +31,5 @@ matrix:
     allow_failures:
         - perl: blead
 before_install:
+          - cpanm Readonly  # so t/magic-readonly.t can run
           - eval $(curl https://travis-perl.github.io/init) --auto
