--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,10 @@ perl:
     - "5.10.0"
     - "5.10.1"
     - "5.8.4"
-    - "5.6.2"
 matrix:
+    include:
+        - perl: 5.6.2
+          env: AUTHOR_TESTING=0 RELEASE_TESTING=0
     allow_failures:
         - perl: blead
 before_install:
