fix Makefile.PL ordering for deleting old Ref/Util.pm (#41)

--- a/dist.ini
+++ b/dist.ini
@@ -77,7 +77,7 @@ filename = README.mkdn
 
 [MakeMaker::Awesome]
 :version = 0.35
-footer_file = makefile-pl-inc.pl
+header_file = makefile-pl-inc.pl
 
 ; authordep ExtUtils::HasCompiler = 0.014
 [DynamicPrereqs]
